# ChessEngine

./: .gitignore  Cargo.toml  Makefile  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/engine/: bitboard.rs  eval.rs  mod.rs  movegen.rs  search.rs  transposition.rs
backend/src/ws/: handler.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Board.tsx  Piece.tsx  Telemetry.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: game.ts
include/: board.hpp  game.hpp  pieces.hpp
src/: board.cpp  chess.rs  game.cpp  main.rs  pieces.cpp
src/chess/: board.rs  board_state.rs  logic.rs  logic_base.rs  moves.rs  piece.rs  piece_logic.rs
