[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chess-engine"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
bitflags = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
